feat:Adicionou mais informações na API Docs
